Fix spacing

--- a/components/TitleWithSubHeadings/TitleWithSubHeadings.module.css
+++ b/components/TitleWithSubHeadings/TitleWithSubHeadings.module.css
@@ -1,9 +1,9 @@
 .container {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-	padding-top: 48px;
-	padding-bottom: 25px;
+  padding-top: 48px;
+  padding-bottom: 25px;
 }
 
 .smallText {
@@ -12,5 +12,5 @@
 }
 
 .largeText {
-  margin: 8px 0px;
+  margin: -4px 0 -12px 0;
 }
